--- a/admin/edit_problems/edit_problems.html
+++ b/admin/edit_problems/edit_problems.html
@@ -3,185 +3,239 @@
 <head>
   <meta charset="UTF-8">
   <title>문제 수정</title>
-  <link rel="stylesheet" href="../../assets/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
-      font-family: sans-serif;
+      font-family: 'Pretendard', sans-serif;
       margin: 0;
-      background: #f4f4f4;
+      background: #f8fafb;
     }
-
     .navbar {
       position: fixed;
       top: 0;
-      right: 0;
-      background-color: #2b94d4;
+      left: 0;
       width: 100%;
-      padding: 14px 20px;
+      background: #3DAEFA;
+      padding: 0 36px;
+      height: 64px;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
+      justify-content: space-between;
       z-index: 1000;
+      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
     }
-
-    .navbar .welcome {
-      margin-right: auto;
-      color: white;
-      font-weight: bold;
+    .navbar .welcome a {
+      color: #fff;
       font-size: 18px;
-    }
-
-    .navbar a {
-      color: white;
+      font-weight: 600;
       text-decoration: none;
-      margin-left: 20px;
-      font-weight: 500;
+      letter-spacing: 0.2px;
+      display: flex;
+      align-items: center;
+      transition: opacity 0.2s;
+      gap: 4px;
     }
-
-    .navbar a:hover {
+    .navbar .welcome a:hover {
+      opacity: 0.85;
       text-decoration: underline;
     }
-
+    .navbar #nav-links a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 26px;
+      font-size: 16px;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 7px;
+      background: transparent;
+      transition: background 0.16s;
+    }
+    .navbar #nav-links a:hover {
+      background: #379fde;
+    }
     .container {
-      max-width: 800px;
-      margin: 120px auto 0 auto;
-      background: white;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      max-width: 750px;
+      margin: 110px auto 0 auto;
+      background: #fff;
+      padding: 44px 38px 36px 38px;
+      border-radius: 16px;
+      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.08);
       text-align: center;
     }
-
     h1 {
-      margin-bottom: 30px;
+      margin-bottom: 32px;
+      font-size: 25px;
+      color: #3DAEFA;
+      font-weight: 700;
     }
-
     textarea {
       width: 100%;
-      height: 300px;
-      padding: 10px;
-      margin-bottom: 20px;
-      font-family: monospace;
-      font-size: 14px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      height: 270px;
+      padding: 18px;
+      margin-bottom: 28px;
+      font-family: 'JetBrains Mono', 'Pretendard', monospace;
+      font-size: 15px;
+      border-radius: 12px;
+      border: 1.5px solid #d2e5f9;
+      background: #f6fafd;
       resize: vertical;
+      outline: none;
+      transition: border 0.15s;
+      color: #222;
     }
-
+    textarea:focus {
+      border: 1.5px solid #3DAEFA;
+      background: #f4faff;
+    }
     button {
-      padding: 10px 20px;
-      background-color: #4CAF50;
-      color: white;
+      padding: 13px 38px;
+      background: #3DAEFA;
+      color: #fff;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+      font-size: 17px;
       font-weight: bold;
+      transition: background 0.18s;
+      box-shadow: 0 2px 8px #3daefa18;
+      margin-top: 2px;
     }
-
     button:hover {
-      background-color: #45a049;
+      background: #3499d6;
+    }
+    @media (max-width: 700px) {
+      .navbar { padding: 0 12px; height: 54px;}
+      .navbar .welcome a { font-size: 15px;}
+      .container { padding: 20px 4vw 16px 4vw; margin-top: 80px;}
+      textarea { font-size: 13px; height: 140px; }
+      button { font-size: 15px; padding: 10px 18px;}
     }
   </style>
 </head>
 <body>
-
   <div class="navbar">
-    <div class="welcome"><a href="../index.html" style="color: white; text-decoration: none;">← 관리자 홈</a></div>
+    <div class="welcome"><a href="/admin/index.html">← 관리자 홈</a></div>
     <div id="nav-links"></div>
   </div>
-
   <div class="container">
     <h1>문제 수정</h1>
     <textarea id="editJson" placeholder="문제 ID와 수정할 JSON을 입력하세요."></textarea>
     <button id="editBtn">수정하기</button>
   </div>
-
   <script>
-    const exampleJson = {
-      "id": "4",
-      "title": "IP 설정 문제",
-      "description": "PC 2대에 각각 IP 주소를 설정하세요. PC1은 192.168.1.2, PC2는 192.168.1.3이어야 합니다.",
-      "expectedCommandsJson": "{\"pc1\": [\"ip address 192.168.1.2 255.255.255.0\"], \"pc2\": [\"ip address 192.168.1.3 255.255.255.0\"]}",
-      "requiredDevicesJson": "{\"pc\": 2}",
-      "difficulty": "EASY",
-      "tags": "ip,pc"
-    };
-
-    // 예제 자동 삽입
-    $('#editJson').val(JSON.stringify(exampleJson, null, 2));
-
-    // 수정 요청
-    $('#editBtn').click(function () {
-      const token = localStorage.getItem('token');
-      if (!token) return alert('로그인이 필요합니다');
-
-      let raw = $('#editJson').val();
-      let json;
-      try {
-        json = JSON.parse(raw);
-      } catch (e) {
-        return alert("유효한 JSON 형식이 아닙니다");
+    $(document).ready(function () {
+      const accessToken = localStorage.getItem('token');
+      const refreshToken = localStorage.getItem('refreshToken');
+      const nav = $('#nav-links');
+      function rejectAccess() {
+        alert('접근 권한이 없습니다.');
+        location.href = '/index.html';
+      }
+      function renderNav() {
+        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
       }
 
-      const id = json.id;
-      delete json.id;
-
-      $.ajax({
-        url: `http://localhost:8080/api/admin/problems/${id}`,
-        method: 'PUT',
-        contentType: 'application/json',
-        data: JSON.stringify(json),
-        headers: {
-          'Authorization': 'Bearer ' + token
-        },
-        success: function () {
-          alert("문제 수정 성공");
-        },
-        error: function (xhr) {
-          alert("수정 실패: " + xhr.responseText);
-        }
-      });
-    });
-
-    // 로그인/로그아웃 네비게이션 처리
-    $(document).ready(function () {
-      const token = localStorage.getItem('token');
-      const nav = $('#nav-links');
-
-      if (token) {
+      // refresh 및 수정 재시도
+      function refreshAndRetry(cb) {
+        if (!refreshToken) return rejectAccess();
         $.ajax({
-          url: "http://localhost:8080/api/auth/is-admin",
-          method: "GET",
-          headers: {
-            "Authorization": "Bearer " + token
+          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ refreshToken }),
+          success: function (res) {
+            localStorage.setItem('token', res.accessToken);
+            localStorage.setItem('refreshToken', res.refreshToken);
+            cb(res.accessToken);
           },
-          success: function (isAdmin) {
-            if (isAdmin) {
-              nav.append('<a href="../../index.html">홈</a>');
-            }
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
-          },
-          error: function () {
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+          error: function () { rejectAccess(); }
+        });
+      }
+
+      function setupEditHandler(token) {
+        $('#editBtn').off('click').on('click', function () {
+          let raw = $('#editJson').val();
+          let json;
+          try {
+            json = JSON.parse(raw);
+          } catch (e) {
+            return alert("유효한 JSON 형식이 아닙니다");
+          }
+          const id = json.id;
+          delete json.id;
+          function doEdit(token2, retry) {
+            $.ajax({
+              url: `http://54.79.120.182:8080/api/admin/problems/${id}`,
+              method: 'PUT',
+              contentType: 'application/json',
+              data: JSON.stringify(json),
+              headers: { 'Authorization': 'Bearer ' + token2 },
+              success: function () {
+                alert("문제 수정 성공");
+              },
+              error: function (xhr) {
+                if (xhr.status === 401 && !retry) {
+                  refreshAndRetry(newToken => doEdit(newToken, true));
+                } else {
+                  alert("수정 실패: " + xhr.responseText);
+                }
+              }
+            });
+          }
+          doEdit(token, false);
+        });
+        // 엔터로 전송 (textarea는 shift+enter 줄바꿈, 엔터만 submit)
+        $('#editJson').keydown(function(e) {
+          if (e.key === 'Enter' && !e.shiftKey) {
+            e.preventDefault();
+            $('#editBtn').click();
           }
         });
-      } else {
-        nav.append('<a href="../../login/login.html">로그인</a>');
-        nav.append('<a href="../../login/signUp.html">회원가입</a>');
       }
 
+      function checkAdminAndInit(token) {
+        $.ajax({
+          url: "http://54.79.120.182:8080/api/auth/is-admin",
+          method: "GET",
+          headers: { "Authorization": "Bearer " + token },
+          success: function (isAdmin) {
+            if (isAdmin) {
+              renderNav();
+              setupEditHandler(token);
+            } else {
+              rejectAccess();
+            }
+          },
+          error: function () { rejectAccess(); }
+        });
+      }
+      if (accessToken) {
+        checkAdminAndInit(accessToken);
+      } else if (refreshToken) {
+        refreshAndRetry(checkAdminAndInit);
+      } else {
+        rejectAccess();
+      }
       $(document).on('click', '#logoutBtn', function () {
         localStorage.removeItem('token');
+        localStorage.removeItem('refreshToken');
         alert('로그아웃 되었습니다');
-        location.href = '../../index.html';
+        location.href = '/index.html';
       });
-    }); 
+      // 예제 JSON 자동 채우기
+      const exampleJson = {
+        "id": "4",
+        "title": "IP 설정 문제",
+        "description": "PC 2대에 각각 IP 주소를 설정하세요. PC1은 192.168.1.2, PC2는 192.168.1.3이어야 합니다.",
+        "expectedCommandsJson": "{\"pc1\": [\"ip address 192.168.1.2 255.255.255.0\"], \"pc2\": [\"ip address 192.168.1.3 255.255.255.0\"]}",
+        "requiredDevicesJson": "{\"pc\": 2}",
+        "difficulty": "EASY",
+        "tags": "ip,pc"
+      };
+      $('#editJson').val(JSON.stringify(exampleJson, null, 2));
+    });
   </script>
-
 </body>
 </html>
