--- a/admin/index.html
+++ b/admin/index.html
@@ -3,86 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <title>관리자 메뉴 - NetLab</title>
-  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
-      font-family: sans-serif;
-      background: #f4f4f4;
+      font-family: 'Pretendard', sans-serif;
+      background: #f8fafb;
       margin: 0;
+      color: #23272f;
     }
 
-    /* 네비게이션 바 */
     .navbar {
       position: fixed;
       top: 0;
-      right: 0;
-      background-color: #2b94d4;
+      left: 0;
       width: 100%;
-      padding: 14px 20px;
+      background: #3DAEFA;
+      padding: 0 36px;
+      height: 64px;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
+      justify-content: space-between;
       z-index: 1000;
+      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
     }
-
     .navbar .welcome {
-      margin-right: auto;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
+      font-size: 21px;
+      font-weight: 700;
+      color: #fff;
+      letter-spacing: 0.2px;
+      text-shadow: 0 1px 2px #36a6ee44;
     }
-
-    .navbar a {
-      color: white;
+    .navbar #nav-links a {
+      color: #fff;
       text-decoration: none;
-      margin-left: 20px;
+      margin-left: 26px;
+      font-size: 16px;
       font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 7px;
+      background: transparent;
+      transition: background 0.16s;
+    }
+    .navbar #nav-links a:hover {
+      background: #379fde;
     }
 
-    .navbar a:hover {
-      text-decoration: underline;
-    }
-
-    /* 관리자 메뉴 박스 */
     .container {
-      background: white;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      background: #fff;
+      padding: 46px 40px 36px 40px;
+      border-radius: 16px;
+      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.09);
       text-align: center;
-      max-width: 600px;
-      margin: 120px auto 0 auto; /* 상단 여백 확보 */
+      max-width: 540px;
+      margin: 110px auto 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     h1 {
-      margin-bottom: 30px;
+      margin-bottom: 32px;
+      font-size: 25px;
+      color: #3DAEFA;
+      font-weight: 700;
     }
 
     .menu {
       list-style: none;
       padding: 0;
+      margin: 0;
+      width: 100%;
     }
 
     .menu li {
-      margin: 30px 0;
+      margin: 22px 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
     }
 
     .menu a {
+      display: inline-block;
+      width: 220px;
+      padding: 15px 0;
+      background: #f6fafd;
+      color: #222;
+      border-radius: 8px;
+      font-size: 17px;
+      font-weight: 600;
+      border: 1.5px solid #3DAEFA;
+      transition: background 0.16s, color 0.18s, border 0.18s;
+      box-shadow: 0 2px 8px #3daefa0b;
       text-decoration: none;
-      padding: 10px 20px;
-      background: #4CAF50;
-      color: white;
-      border-radius: 5px;
-      transition: background 0.2s ease;
+      letter-spacing: 0.2px;
+    }
+    .menu a:hover {
+      background: #3DAEFA;
+      color: #fff;
+      border-color: #3397e2;
     }
 
-    .menu a:hover {
-      background: #45a049;
+    @media (max-width: 700px) {
+      .navbar { padding: 0 12px; height: 54px;}
+      .navbar .welcome { font-size: 17px;}
+      .container { padding: 24px 7vw 24px 7vw; min-width: 0; max-width: 97vw; }
+      .menu a { width: 95vw; min-width: 0; font-size: 15px;}
     }
   </style>
 </head>
@@ -91,58 +119,83 @@
   <!-- 네비게이션 바 -->
   <div class="navbar">
     <div class="welcome">NetLab 관리자</div>
-    <div id="nav-links">
-      <!-- 로그인 여부에 따라 동적 삽입 -->
-    </div>
+    <div id="nav-links"></div>
   </div>
 
   <!-- 관리자 메뉴 -->
   <div class="container">
     <h1>NetLab 관리자 페이지</h1>
     <ul class="menu">
-      <li><a href="./add_problems/add_problems.html">문제 등록</a></li>
-      <li><a href="./edit_problems/edit_problems.html">문제 수정</a></li>
-      <li><a href="./delete_problems/delete_problems.html">문제 삭제</a></li>
-      <li><a href="./submissions/submissions.html">제출 내역</a></li>
-      <li><a href="./view_problems/view_problems.html">문제 내역 조회</a></li>
+      <li><a href="/admin/add_problems/add_problems.html">문제 등록</a></li>
+      <li><a href="/admin/edit_problems/edit_problems.html">문제 수정</a></li>
+      <li><a href="/admin/delete_problems/delete_problems.html">문제 삭제</a></li>
+      <li><a href="/admin/submissions/submissions.html">제출 내역</a></li>
+      <li><a href="/admin/view_problems/view_problems.html">문제 내역 조회</a></li>
     </ul>
   </div>
 
-  <!-- 로그아웃 버튼 동작 -->
   <script>
     $(document).ready(function () {
-      const token = localStorage.getItem('token');
+      const accessToken = localStorage.getItem('token');
+      const refreshToken = localStorage.getItem('refreshToken');
       const nav = $('#nav-links');
 
-      if (token) {
+      function renderNav() {
+        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
+      }
+
+      function rejectAccess() {
+        alert("접근 권한이 없습니다.");
+        location.href = "/index.html";
+      }
+
+      function checkAdminAndRender(token) {
         $.ajax({
-          url: "http://localhost:8080/api/auth/is-admin",
+          url: "http://54.79.120.182:8080/api/auth/is-admin",
           method: "GET",
-          headers: {
-            "Authorization": "Bearer " + token
-          },
+          headers: { "Authorization": "Bearer " + token },
           success: function (isAdmin) {
             if (isAdmin) {
-              nav.append('<a href="../index.html">홈</a>');
+              renderNav();
+            } else {
+              rejectAccess();
             }
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
           },
           error: function () {
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+            rejectAccess();
+          }
+        });
+      }
+
+      // 자동 refresh + access 체크
+      if (accessToken) {
+        checkAdminAndRender(accessToken);
+      } else if (refreshToken) {
+        $.ajax({
+          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ refreshToken }),
+          success: function (res) {
+            localStorage.setItem('token', res.accessToken);
+            localStorage.setItem('refreshToken', res.refreshToken);
+            checkAdminAndRender(res.accessToken);
+          },
+          error: function () {
+            rejectAccess();
           }
         });
       } else {
-        nav.append('<a href="../login/login.html">로그인</a>');
-        nav.append('<a href="../login/signUp.html">회원가입</a>');
+        rejectAccess();
       }
 
       $(document).on('click', '#logoutBtn', function () {
         localStorage.removeItem('token');
+        localStorage.removeItem('refreshToken');
         alert('로그아웃 되었습니다');
-        location.href = '../index.html';
+        location.href = '/index.html';
       });
     });
   </script>
-
 </body>
 </html>
