--- a/admin/view_problems/view_problems.html
+++ b/admin/view_problems/view_problems.html
@@ -3,145 +3,243 @@
 <head>
   <meta charset="UTF-8">
   <title>문제 목록</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
-      font-family: sans-serif;
+      font-family: 'Pretendard', sans-serif;
       margin: 0;
-      background-color: #f4f4f4;
+      background: #f8fafb;
     }
-
     .navbar {
       position: fixed;
-      top: 0;
-      right: 0;
-      background-color: #2b94d4;
-      width: 100%;
-      padding: 14px 20px;
+      top: 0; left: 0; width: 100%;
+      background: #3DAEFA;
+      padding: 0 36px;
+      height: 64px;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
+      justify-content: space-between;
       z-index: 1000;
+      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
     }
-
-    .navbar .welcome {
-      margin-right: auto;
-      color: white;
-      font-weight: bold;
+    .navbar .welcome a {
+      color: #fff;
       font-size: 18px;
-    }
-
-    .navbar a {
-      color: white;
+      font-weight: 600;
       text-decoration: none;
-      margin-left: 20px;
-      font-weight: 500;
+      letter-spacing: 0.2px;
+      display: flex;
+      align-items: center;
+      transition: opacity 0.2s;
+      gap: 4px;
     }
-
-    .navbar a:hover {
+    .navbar .welcome a:hover {
+      opacity: 0.85;
       text-decoration: underline;
     }
-
-    .container {
-      max-width: 800px;
-      margin: 120px auto 0 auto;
-      padding: 30px;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    .navbar #nav-links a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 26px;
+      font-size: 16px;
+      font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 7px;
+      background: transparent;
+      transition: background 0.16s;
     }
-
+    .navbar #nav-links a:hover {
+      background: #379fde;
+    }
+    .container {
+      max-width: 820px;
+      margin: 110px auto 0 auto;
+      padding: 38px 30px 34px 30px;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.08);
+    }
     h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
+      font-size: 25px;
+      margin-bottom: 32px;
+      color: #3DAEFA;
+      font-weight: 700;
       text-align: center;
     }
-
     #problemList {
       list-style: none;
       padding: 0;
+      margin: 0;
     }
-
     #problemList li {
-      background-color: #f1f1f1;
-      margin-bottom: 12px;
-      padding: 12px;
-      border-radius: 6px;
+      background: #f6fafd;
+      margin-bottom: 18px;
+      padding: 20px 18px 20px 18px;
+      border-radius: 12px;
       font-size: 16px;
+      box-shadow: 0 2px 8px #3daefa0b;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      border: 1.5px solid #d2e5f9;
+      position: relative;
+    }
+    #problemList li strong { color: #23272f; }
+    .delete-btn {
+      background: #FF3337;
+      color: #fff;
+      border: none;
+      border-radius: 7px;
+      padding: 8px 22px;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      position: absolute;
+      top: 24px;
+      right: 24px;
+      box-shadow: 0 2px 8px #ff33371b;
+      transition: background 0.16s;
+    }
+    .delete-btn:hover { background: #d1001d; }
+    @media (max-width: 700px) {
+      .navbar { padding: 0 12px; height: 54px;}
+      .navbar .welcome a { font-size: 15px;}
+      .container { padding: 18px 6vw; margin-top: 80px;}
+      #problemList li { padding: 13px 6vw 13px 6vw; font-size: 14px;}
+      .delete-btn { top: 12px; right: 12px; font-size: 13px; padding: 6px 14px;}
     }
   </style>
 </head>
 <body>
-
-  <!-- ✅ 상단 네비게이션 바 -->
   <div class="navbar">
-    <div class="welcome"><a href="../index.html" style="color: white; text-decoration: none;">← 관리자 홈</a></div>
+    <div class="welcome"><a href="/admin/index.html">← 관리자 홈</a></div>
     <div id="nav-links"></div>
   </div>
-
   <div class="container">
     <h1>문제 목록 조회</h1>
     <ul id="problemList"></ul>
   </div>
-
   <script>
-    const token = localStorage.getItem('token');
-
-    // ✅ navbar 로그인/로그아웃 링크 구성
     $(document).ready(function () {
+      const accessToken = localStorage.getItem('token');
+      const refreshToken = localStorage.getItem('refreshToken');
       const nav = $('#nav-links');
 
-      if (token) {
-        $.ajax({
-          url: "http://localhost:8080/api/auth/is-admin",
-          method: "GET",
-          headers: {
-            "Authorization": "Bearer " + token
-          },
-          success: function (isAdmin) {
-            if (isAdmin) {
-              nav.append('<a href="../../index.html">홈</a>');
-            }
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
-          },
-          error: function () {
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
-          }
-        });
-      } else {
-        nav.append('<a href="../../login/login.html">로그인</a>');
-        nav.append('<a href="../../login/signUp.html">회원가입</a>');
+      function rejectAccess() {
+        alert('접근 권한이 없습니다.');
+        location.href = '/index.html';
+      }
+      function renderNav() {
+        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
       }
 
-      $(document).on('click', '#logoutBtn', function () {
-        localStorage.removeItem('token');
-        alert('로그아웃 되었습니다');
-        location.href = '../../index.html';
+      // ----------- 토큰 refresh 공통 -----------
+      function refreshAndRetry(cb) {
+        if (!refreshToken) return rejectAccess();
+        $.ajax({
+          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ refreshToken }),
+          success: function (res) {
+            localStorage.setItem('token', res.accessToken);
+            localStorage.setItem('refreshToken', res.refreshToken);
+            cb(res.accessToken);
+          },
+          error: function () { rejectAccess(); }
+        });
+      }
+
+      // ----------- 문제 리스트 불러오기 -----------
+      function renderProblemList(token) {
+        $.ajax({
+          url: 'http://54.79.120.182:8080/api/admin/problems',
+          method: 'GET',
+          headers: { 'Authorization': 'Bearer ' + token },
+          success: function (res) {
+            const list = $('#problemList');
+            list.empty();
+            res.forEach(p => {
+              const item = $(`
+                <li>
+                  <div><strong>ID: ${p.id}</strong></div>
+                  <div><strong>${p.title}</strong> (${p.difficulty})</div>
+                  <div>태그: ${p.tags}</div>
+                  <button class="delete-btn" data-id="${p.id}">삭제</button>
+                </li>
+              `);
+              list.append(item);
+            });
+          },
+          error: function (xhr) {
+            if (xhr.status === 401) {
+              refreshAndRetry(renderProblemList);
+            } else {
+              alert("문제 불러오기 실패: " + xhr.responseText);
+            }
+          }
+        });
+      }
+
+      // ----------- 관리자 인증 후 네비+리스트 -----------
+      function checkAdminAndRender(token) {
+        $.ajax({
+          url: "http://54.79.120.182:8080/api/auth/is-admin",
+          method: "GET",
+          headers: { "Authorization": "Bearer " + token },
+          success: function (isAdmin) {
+            if (isAdmin) {
+              renderNav();
+              renderProblemList(token);
+            } else rejectAccess();
+          },
+          error: function () { rejectAccess(); }
+        });
+      }
+
+      // ----------- delete 버튼 이벤트 -----------
+      $(document).on('click', '.delete-btn', function () {
+        const problemId = $(this).data('id');
+        if (!confirm(`정말 문제 ${problemId}를 삭제하시겠습니까?`)) return;
+        function deleteProblem(token, isRetry) {
+          $.ajax({
+            url: `http://54.79.120.182:8080/api/admin/problems/${problemId}`,
+            method: 'DELETE',
+            headers: { 'Authorization': 'Bearer ' + token },
+            success: function () {
+              alert("삭제되었습니다");
+              renderProblemList(token); // 새로고침 말고 리스트만 새로 그림
+            },
+            error: function (xhr) {
+              if (xhr.status === 401 && !isRetry) {
+                refreshAndRetry(newToken => deleteProblem(newToken, true));
+              } else {
+                alert("삭제 실패: " + xhr.responseText);
+              }
+            }
+          });
+        }
+        deleteProblem(localStorage.getItem('token'), false);
       });
 
-      // ✅ 문제 목록 불러오기
-      $.ajax({
-        url: 'http://localhost:8080/api/admin/problems',
-        method: 'GET',
-        headers: {
-          'Authorization': 'Bearer ' + token
-        },
-        success: function (res) {
-          const list = $('#problemList');
-          res.forEach(p => {
-            list.append(`<li><strong>${p.title}</strong> (${p.difficulty})<br>태그: ${p.tags}</li>`);
-          });
-        },
-        error: function (xhr) {
-          alert("문제 불러오기 실패: " + xhr.responseText);
-        }
+      // ----------- 진입시 분기 -----------
+      if (accessToken) {
+        checkAdminAndRender(accessToken);
+      } else if (refreshToken) {
+        refreshAndRetry(checkAdminAndRender);
+      } else {
+        rejectAccess();
+      }
+      // ----------- 로그아웃 -----------
+      $(document).on('click', '#logoutBtn', function () {
+        localStorage.removeItem('token');
+        localStorage.removeItem('refreshToken');
+        alert('로그아웃 되었습니다');
+        location.href = '/index.html';
       });
     });
   </script>
-
 </body>
 </html>
