--- a/login/login.html
+++ b/login/login.html
@@ -3,103 +3,137 @@
 <head>
   <meta charset="UTF-8">
   <title>NetLab 로그인</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      background: #f5f5f5;
-    }
-
-    .navbar {
-      position: fixed;
-      top: 0;
-      right: 0;
-      background-color: #2b94d4;
-      width: 100%;
-      padding: 14px 20px;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      z-index: 1000;
-    }
-
-    .navbar .welcome {
-      margin-right: auto;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: 500;
-    }
-
-    .navbar a:hover {
-      text-decoration: underline;
-    }
-
-    .main {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .login-box {
-      margin-top: 80px;
-      background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-      width: 100%;
-      max-width: 400px;
-    }
-
-    .login-box h2 {
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    input {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 15px;
-    }
-
-    button {
-      margin-top: 20px;
-      padding: 12px;
-      width: 100%;
-      background: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-    }
-
-    button:hover {
-      background: #45a049;
-    }
+      * { box-sizing: border-box; }
+      body {
+        font-family: 'Pretendard', sans-serif;
+        margin: 0;
+        background: #f8fafb;
+      }
+      .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: #3DAEFA;
+        padding: 0 36px;
+        height: 64px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000;
+        box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
+      }
+      .navbar .brand {
+        font-size: 22px;
+        font-weight: 700;
+        color: #fff;
+        text-shadow: 0 1px 2px #36a6ee44;
+        letter-spacing: 0.5px;
+        transition: opacity 0.2s;
+      }
+      .navbar .brand:hover { opacity: 0.85; }
+      .navbar #nav-links a {
+        color: #fff;
+        text-decoration: none;
+        margin-left: 26px;
+        font-size: 16px;
+        font-weight: 500;
+        padding: 8px 14px;
+        border-radius: 7px;
+        transition: background 0.16s;
+        background: transparent;
+      }
+      .navbar #nav-links a:hover {
+        background: #379fde;
+      }
+      .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background: none;
+      }
+      .login-box {
+        background: #fff;
+        padding: 44px 36px 36px 36px;
+        border-radius: 15px;
+        box-shadow: 0 10px 32px rgba(61, 174, 250, 0.10);
+        width: 100%;
+        max-width: 410px;
+        min-height: 350px;
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .login-box h2 {
+        margin-bottom: 26px;
+        font-size: 25px;
+        color: #3DAEFA;
+        font-weight: 700;
+      }
+      input {
+        display: block;
+        width: 100%;
+        padding: 13px;
+        margin: 12px 0 0 0;
+        border-radius: 7px;
+        border: 1.5px solid #d2e5f9;
+        font-size: 16px;
+        background: #f9fcff;
+        outline: none;
+        transition: border 0.15s;
+      }
+      input:focus {
+        border: 1.5px solid #3DAEFA;
+        background: #f4faff;
+      }
+      button {
+        margin-top: 28px;
+        padding: 13px 0;
+        width: 100%;
+        background: #3DAEFA;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 17px;
+        font-weight: bold;
+        transition: background 0.18s;
+        box-shadow: 0 2px 8px #3daefa18;
+      }
+      button:hover {
+        background: #3499d6;
+      }
+      .signup-link {
+        margin-top: 18px;
+        font-size: 15px;
+        color: #5c5c6b;
+        text-align: center;
+      }
+      .signup-link a {
+        color: #3DAEFA;
+        font-weight: 500;
+        text-decoration: none;
+        margin-left: 5px;
+      }
+      .signup-link a:hover {
+        text-decoration: underline;
+      }
+      @media (max-width: 700px) {
+        .navbar { padding: 0 12px; height: 54px;}
+        .navbar .brand { font-size: 18px;}
+        .login-box { padding: 26px 12px 26px 12px; }
+      }
   </style>
 </head>
 <body>
 
   <div class="navbar">
-    <div class="welcome"><a href="../index.html" style="color: white; text-decoration: none;">NetLab</a></div>
+    <a class="brand" href="/index.html">NetLab</a>
     <div id="nav-links"></div>
   </div>
 
@@ -109,66 +143,89 @@
       <input type="text" id="userId" placeholder="아이디">
       <input type="password" id="password" placeholder="비밀번호">
       <button id="loginBtn">로그인</button>
+      <div class="signup-link">
+        아직 회원이 아니신가요? 
+        <a href="/login/signUp.html">회원가입</a>
+      </div>
     </div>
   </div>
 
   <script>
     $(document).ready(function () {
-      const token = localStorage.getItem('token');
+      const accessToken = localStorage.getItem('token');
+      const refreshToken = localStorage.getItem('refreshToken');
       const nav = $('#nav-links');
-
-      if (token) {
+      function renderNav() {
+        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
+      }
+      function checkAdminAndRender(token) {
         $.ajax({
-          url: "http://localhost:8080/api/auth/is-admin",
+          url: "http://54.79.120.182:8080/api/auth/is-admin",
           method: "GET",
-          headers: {
-            "Authorization": "Bearer " + token
-          },
-          success: function () {
-            nav.append('<a href="../index.html">홈</a>');
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+          headers: { "Authorization": "Bearer " + token },
+          success: function () { renderNav(); },
+          error: function () { renderNav(); }
+        });
+      }
+      if (accessToken) {
+        checkAdminAndRender(accessToken);
+      } else if (refreshToken) {
+        $.ajax({
+          url: 'http://54.79.120.182:8080/api/auth/refresh',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ refreshToken }),
+          success: function (res) {
+            localStorage.setItem('token', res.accessToken);
+            localStorage.setItem('refreshToken', res.refreshToken);
+            localStorage.setItem('name', res.name); // ★ 추가!
+            checkAdminAndRender(res.accessToken);
           },
           error: function () {
-            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+            nav.html('<a href="/index.html">홈</a><a href="/login/signUp.html">회원가입</a>');
           }
         });
       } else {
-        nav.append('<a href="../index.html">홈</a>');
-        nav.append('<a href="./signUp.html">회원가입</a>');
+        nav.html('<a href="/index.html">홈</a><a href="/login/signUp.html">회원가입</a>');
       }
-
       $(document).on('click', '#logoutBtn', function () {
         localStorage.removeItem('token');
+        localStorage.removeItem('refreshToken');
+        localStorage.removeItem('name'); // ★ 추가!
         alert('로그아웃 되었습니다');
-        location.href = '../index.html';
+        location.href = '/index.html';
       });
-
       $('#loginBtn').click(function () {
         const userId = $('#userId').val();
         const password = $('#password').val();
-
         if (!userId || !password) {
           return alert('아이디와 비밀번호를 입력하세요.');
         }
-
         $.ajax({
-          url: 'http://localhost:8080/api/auth/login',
+          url: 'http://54.79.120.182:8080/api/auth/login',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ userId, password }),
           success: function (response) {
-            console.log('로그인 응답:', response);
-            localStorage.setItem('token', response.message);
+            localStorage.setItem('token', response.accessToken);
+            localStorage.setItem('refreshToken', response.refreshToken);
+            localStorage.setItem('name', response.name); // ★ 추가!
             alert('로그인 성공!');
-            window.location.href = '../index.html';
+            window.location.href = '/index.html';
           },
           error: function () {
             alert('로그인 실패. 아이디 또는 비밀번호를 확인하세요.');
           }
         });
       });
+      // 엔터키 치면 전송
+      $('input').keypress(function(e){
+        if(e.which === 13){
+          $('#loginBtn').click();
+        }
+      });
     });
   </script>
-
+  
 </body>
 </html>
