--- a/login/signUp.html
+++ b/login/signUp.html
@@ -3,106 +3,138 @@
 <head>
   <meta charset="UTF-8">
   <title>NetLab 회원가입</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
-      font-family: sans-serif;
+      font-family: 'Pretendard', sans-serif;
       margin: 0;
-      background: #f0f0f0;
+      background: #f8fafb;
     }
-
     .navbar {
       position: fixed;
       top: 0;
-      right: 0;
-      background-color: #2b94d4;
+      left: 0;
       width: 100%;
-      padding: 14px 20px;
+      background: #3DAEFA;
+      padding: 0 36px;
+      height: 64px;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
+      justify-content: space-between;
       z-index: 1000;
+      box-shadow: 0 4px 16px rgba(61, 174, 250, 0.06);
     }
-
-    .navbar .welcome {
-      margin-right: auto;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
+    .navbar .brand {
+      font-size: 22px;
+      font-weight: 700;
+      color: #fff;
+      letter-spacing: 0.5px;
+      text-shadow: 0 1px 2px #36a6ee44;
+      transition: opacity 0.2s;
     }
-
-    .navbar a {
-      color: white;
+    .navbar .brand:hover { opacity: 0.85; }
+    .navbar #nav-links a {
+      color: #fff;
       text-decoration: none;
-      margin-left: 20px;
+      margin-left: 26px;
+      font-size: 16px;
       font-weight: 500;
+      padding: 8px 14px;
+      border-radius: 7px;
+      transition: background 0.16s;
+      background: transparent;
     }
-
-    .navbar a:hover {
-      text-decoration: underline;
+    .navbar #nav-links a:hover {
+      background: #379fde;
     }
-
     .main {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
+      background: none;
     }
-
     .signup-box {
-      margin-top: 80px;
-      background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      background: #fff;
+      padding: 44px 36px 36px 36px;
+      border-radius: 15px;
+      box-shadow: 0 10px 32px rgba(61, 174, 250, 0.10);
       width: 100%;
-      max-width: 400px;
+      max-width: 410px;
+      min-height: 380px;
+      margin-top: 80px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
-
     .signup-box h2 {
-      margin-bottom: 20px;
-      text-align: center;
+      margin-bottom: 26px;
+      font-size: 25px;
+      color: #3DAEFA;
+      font-weight: 700;
     }
-
     input {
       display: block;
       width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 15px;
-    }
-
-    button {
-      margin-top: 20px;
-      padding: 12px;
-      width: 100%;
-      background: #2196F3;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      padding: 13px;
+      margin: 12px 0 0 0;
+      border-radius: 7px;
+      border: 1.5px solid #d2e5f9;
       font-size: 16px;
-      font-weight: bold;
+      background: #f9fcff;
+      outline: none;
+      transition: border 0.15s;
     }
-
+    input:focus {
+      border: 1.5px solid #3DAEFA;
+      background: #f4faff;
+    }
+    button {
+      margin-top: 28px;
+      padding: 13px 0;
+      width: 100%;
+      background: #3DAEFA;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 17px;
+      font-weight: bold;
+      transition: background 0.18s;
+      box-shadow: 0 2px 8px #3daefa18;
+    }
     button:hover {
-      background: #1976D2;
+      background: #3499d6;
+    }
+    .login-link {
+      margin-top: 18px;
+      font-size: 15px;
+      color: #5c5c6b;
+      text-align: center;
+    }
+    .login-link a {
+      color: #3DAEFA;
+      font-weight: 500;
+      text-decoration: none;
+      margin-left: 5px;
+    }
+    .login-link a:hover {
+      text-decoration: underline;
+    }
+    @media (max-width: 700px) {
+      .navbar { padding: 0 12px; height: 54px;}
+      .navbar .brand { font-size: 18px;}
+      .signup-box { padding: 26px 12px 26px 12px; }
     }
   </style>
 </head>
 <body>
-
   <div class="navbar">
-    <div class="welcome"><a href="../index.html" style="color: white; text-decoration: none;">NetLab</a></div>
+    <a class="brand" href="/index.html">NetLab</a>
     <div id="nav-links"></div>
   </div>
-
   <div class="main">
     <div class="signup-box">
       <h2>회원가입</h2>
@@ -110,27 +142,33 @@
       <input type="password" id="password" placeholder="비밀번호">
       <input type="text" id="name" placeholder="닉네임">
       <button onclick="signUp()">가입하기</button>
+      <div class="login-link">
+        이미 회원이신가요?
+        <a href="/login/login.html">로그인</a>
+      </div>
     </div>
   </div>
-
   <script>
     // 상단바 구성
     $(document).ready(function () {
       const token = localStorage.getItem('token');
       const nav = $('#nav-links');
-
       if (token) {
-        nav.append('<a href="../index.html">홈</a>');
-        nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
       } else {
-        nav.append('<a href="../index.html">홈</a>');
-        nav.append('<a href="./login.html">로그인</a>');
+        nav.html('<a href="/index.html">홈</a><a href="/login/login.html">로그인</a>');
       }
-
       $(document).on('click', '#logoutBtn', function () {
         localStorage.removeItem('token');
         alert('로그아웃 되었습니다');
-        location.href = '../index.html';
+        location.href = '/index.html';
+      });
+
+      // 엔터키 치면 전송
+      $('input').keypress(function(e){
+        if(e.which === 13){
+          signUp();
+        }
       });
     });
 
@@ -146,13 +184,13 @@
       }
 
       $.ajax({
-        url: 'http://localhost:8080/api/auth/signup',
+        url: 'http://54.79.120.182:8080/api/auth/signup',
         type: 'POST',
         contentType: 'application/json',
         data: JSON.stringify({ userId, password, name }),
         success: function(response) {
           alert('회원가입 성공! 로그인 페이지로 이동합니다.');
-          window.location.href = 'login.html';
+          window.location.href = '/login/login.html';
         },
         error: function(xhr) {
           alert('회원가입 실패: ' + xhr.responseText);
@@ -160,6 +198,5 @@
       });
     }
   </script>
-
 </body>
 </html>
