--- a/admin/edit_problems/edit_problems.html
+++ b/admin/edit_problems/edit_problems.html
@@ -141,7 +141,7 @@
       function refreshAndRetry(cb) {
         if (!refreshToken) return rejectAccess();
         $.ajax({
-          url: 'https://netlab.kr/api/auth/refresh',
+          url: 'https://be.netlab.kr/api/auth/refresh',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ refreshToken }),
@@ -167,7 +167,7 @@
           delete json.id;
           function doEdit(token2, retry) {
             $.ajax({
-              url: `https://netlab.kr/api/admin/problems/${id}`,
+              url: `https://be.netlab.kr/api/admin/problems/${id}`,
               method: 'PUT',
               contentType: 'application/json',
               data: JSON.stringify(json),
@@ -197,7 +197,7 @@
 
       function checkAdminAndInit(token) {
         $.ajax({
-          url: "https://netlab.kr/api/auth/is-admin",
+          url: "https://be.netlab.kr/api/auth/is-admin",
           method: "GET",
           headers: { "Authorization": "Bearer " + token },
           success: function (isAdmin) {
